Implement Todo list

--- a/LedenAdministratie/templates/base.html
+++ b/LedenAdministratie/templates/base.html
@@ -23,7 +23,7 @@
 </nav>
 
 <div class="container-fluid">
-    <div class="row">
+    <div class="row mt-2">
         <nav class="col-2 d-none d-block bg-light sidebar">
             <div class="sidebar-sticky">
 
@@ -80,7 +80,7 @@
 
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="{% url 'todolist' %}">
                             <span data-feather="calendar"></span>Todo lijst
                         </a>
                     </li>
