--- a/LedenAdministratie/templates/notes_table.html
+++ b/LedenAdministratie/templates/notes_table.html
@@ -17,7 +17,7 @@
                 {% for note in object.notes.all %}
                 <tr>
                     <td>{{ note.created }}</td>
-                    <td>{{ note.username }}</td>
+                    <td>{{ note.username|capfirst }}</td>
                     <td>{{ note.text|truncatechars:20 }}</td>
                     <td>
                         {% if note.done %}
@@ -68,7 +68,7 @@
                           <div class="modal-dialog modal-dialog-centered" role="document">
                             <div class="modal-content">
                               <div class="modal-header">
-                                <h5 class="modal-title">Notitie gemaakt door {{ note.username }}</h5>
+                                <h5 class="modal-title">Notitie gemaakt door {{ note.username|capfirst }}</h5>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                   <span aria-hidden="true">&times;</span>
                                 </button>
