--- a/LedenAdministratie/templates/base.html
+++ b/LedenAdministratie/templates/base.html
@@ -72,6 +72,11 @@
                             <span data-feather="mail"></span>Versturen
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <span data-feather="dollar-sign"></span>Betaling verwerken
+                        </a>
+                    </li>
                </ul>
 
                 <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
