Fix photo width and add shadows

--- a/LedenAdministratie/templates/edit_lid.html
+++ b/LedenAdministratie/templates/edit_lid.html
@@ -79,7 +79,7 @@
                     </div>
                     <div class="col-3">
                         <div class="d-flex justify-content-center mb-3">
-                            <img src="{{ form.foto|img2base64 }}" class="border rounded mt-3" height="200px" width="150px">
+                            <img src="{{ form.foto|img2base64 }}" class="border rounded shadow mt-3" height="200px" width="150px">
                         </div>
                         <div class="custom-file" id="customFile" lang="es">
                             <input type="file" class="custom-file-input" id="id_foto" name="foto"
