--- a/LedenAdministratie/templates/invoice/invoice.css
+++ b/LedenAdministratie/templates/invoice/invoice.css
@@ -1,27 +1,26 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css?family=Pacifico|Source+Sans+Pro:400,700");
 @page {
   margin: 3cm;
   @bottom-left {
     color: #000000;
-    font-family: Pacifico;
+    font-family: DejaVu Sans;
     content: 'DJO Amersfoort'; }
   @bottom-right {
     color: #a9a;
     content: 'info@djoamersfoort.nl | Tel. 06-166 28 350 | www.djoamersfoort.nl';
-    font-family: Pacifico;
+    font-family: DejaVu Sans;
     font-size: 9pt; } }
 
 html {
   color: #14213d;
-  font-family: Source Sans Pro;
+  font-family: DejaVu Sans;
   font-size: 11pt;
   line-height: 1.6; }
   html body {
     margin: 0; }
   html h1 {
     color: #000000;
-    font-family: Pacifico;
+    font-family: DejaVu Sans;
     font-size: 40pt;
     margin: 0; }
   html aside {
