--- a/LedenAdministratie/templates/invoice/invoice.html
+++ b/LedenAdministratie/templates/invoice/invoice.html
@@ -1,5 +1,3 @@
-{% load static %}
-
 <!doctype html>
 <html>
   <head>
@@ -9,6 +7,7 @@
   </head>
 
   <body>
+    <img src="local:static/img/djo-logo.png" id="logo">
     <h1>Factuur</h1>
 
     <aside>
