--- a/LedenAdministratie/templates/invoice/invoice.html
+++ b/LedenAdministratie/templates/invoice/invoice.html
@@ -63,5 +63,10 @@
         </tr>
       </tbody>
     </table>
+
+    <p id="extra_text">
+      {{ extra_text|linebreaks }}
+    </p>
+
   </body>
 </html>
