--- a/LedenAdministratie/templates/base.html
+++ b/LedenAdministratie/templates/base.html
@@ -20,7 +20,7 @@
 <body>
 
 <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-2 mr-0" href="{% url 'ledenlijst' %}">Leden DJO</a>
+    <a class="navbar-brand col-2 mr-0" href="{% url 'members' %}">Leden DJO</a>
 </nav>
 
 <div class="container-fluid">
@@ -35,14 +35,14 @@
 
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a {% if filter_slug == '' %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="{% url 'ledenlijst' %}">
+                            <a {% if filter_slug == '' %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="{% url 'members' %}">
                                 <span data-feather="filter"></span>Alle leden
                             </a>
                         </li>
 
                         {% for type in types %}
                             <li class="nav-item">
-                                <a {% if filter_slug == type.slug %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="{% url 'ledenlijst' type.slug %}">
+                                <a {% if filter_slug == type.slug %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="{% url 'members' type.slug %}">
                                     <span data-feather="filter"></span>{{ type.display_name }}
                                 </a>
                             </li>
