Fix file includes in invoice

--- a/LedenAdministratie/templates/invoice/invoice.html
+++ b/LedenAdministratie/templates/invoice/invoice.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <img src="local:static/img/djo-logo.png" id="logo">
+    <img src="local:static/img/djo-logo.png:image/png" id="logo">
     <h1>Factuur</h1>
 
     <aside>
