--- a/LedenAdministratie/templates/todo_list.html
+++ b/LedenAdministratie/templates/todo_list.html
@@ -4,7 +4,7 @@
 
     <div class="alert alert-info bg-secondary text-white">
         Aantal Todo's:
-        <span class="badge badge-light">{{ count }}</span>
+        <span class="badge badge-light">{{ object_list.count }}</span>
     </div>
 
     <div class="table-responsive">
