--- a/LedenAdministratie/templates/base.html
+++ b/LedenAdministratie/templates/base.html
@@ -74,7 +74,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="{% url 'invoice_payment' %}">
                             <span data-feather="dollar-sign"></span>Betaling verwerken
                         </a>
                     </li>
