--- a/LedenAdministratie/templates/lid_note.html
+++ b/LedenAdministratie/templates/lid_note.html
@@ -17,7 +17,7 @@
         <div class="card-body">
             <div class="form-row">
                 <div class="col-10">
-                    <h5 class="card-title">Notitie voor {{ member.first_name }} {{ member.last_name }} </h5>
+                    <h5 class="card-title">Notitie voor {{ member.full_name }} </h5>
                     {{ form.text|add_class:'form-control' }}
                     <br/>
 
