--- a/LedenAdministratie/templates/invoice_payment.html
+++ b/LedenAdministratie/templates/invoice_payment.html
@@ -34,7 +34,30 @@
                     <td>{{ invoice.sent|default:"Niet verstuurd" }}</td>
                     <td>{{ invoice.amount }}</td>
                     <td>{{ invoice.amount_unpayed }}</td>
-                    <td><a class="btn-sm btn-success"   href="{% url 'invoice_pay_full' invoice.pk %}"><span data-feather="check"></span></a></td>
+                    <td><a class="btn-sm btn-success" href="#" data-toggle="modal" data-target="#showInvoicePayFullModal{{ invoice.pk }}"><span data-feather="check"></span>
+                    </a>
+                        <!-- Invoice Pay Full confirm Modal -->
+                        <div class="modal fade" id="showInvoicePayFullModal{{ invoice.id }}" tabindex="-1" role="dialog">
+                          <div class="modal-dialog modal-dialog-centered" role="document">
+                            <div class="modal-content">
+                              <div class="modal-header">
+                                <h5 class="modal-title">Factuur betaald?</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                  <span aria-hidden="true">&times;</span>
+                                </button>
+                              </div>
+                              <div class="modal-body">
+                                <p>Weet u zeker dat u de factuur {{ invoice.invoice_number }} als volledig betaald wilt markeren?</p>
+                              </div>
+                              <div class="modal-footer">
+                                  <a class="btn btn-primary" href="{% url 'invoice_pay_full' invoice.pk %}">Betaald</a>
+                                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuleren</button>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                    </td>
+
                     <td><a class="btn-sm btn-secondary" href="{% url 'invoice_pay_part' invoice.pk %}"><span data-feather="dollar-sign"></span></a></td>
                     <td><a class="btn-sm btn-danger"    href="#" data-toggle="modal" data-target="#showInvoiceDeleteModal{{ invoice.pk }}"><span data-feather="trash"></span>
                         </a>
