Make member names link to member details

--- a/LedenAdministratie/templates/invoice_payment.html
+++ b/LedenAdministratie/templates/invoice_payment.html
@@ -28,7 +28,7 @@
             {% for invoice in object_list %}
                 <tr>
                     <td>{{ invoice.invoice_number }}</td>
-                    <td>{{ invoice.member.full_name }}</td>
+                    <td><a href="{% url 'lid_edit' invoice.member.pk %}" class="text-dark">{{ invoice.member.full_name }}</a></td>
                     <td>{{ invoice.created }}</td>
                     <td>{{ invoice.username|capfirst }}</td>
                     <td>{{ invoice.sent|default:"Niet verstuurd" }}</td>
