Make photo responsive

--- a/LedenAdministratie/templates/edit_member.html
+++ b/LedenAdministratie/templates/edit_member.html
@@ -77,9 +77,9 @@
                     </div>
                     <div class="col-2">
                     </div>
-                    <div class="col-3">
+                    <div class="col-2">
                         <div class="d-flex justify-content-center mb-3">
-                            <img src="{{ form.foto|img2base64 }}" class="border rounded shadow mt-3" height="200px" width="150px">
+                            <img src="{{ form.foto|img2base64 }}" class="border img-fluid rounded shadow mt-3">
                         </div>
                         <div class="custom-file" id="customFile" lang="es">
                             <input type="file" class="custom-file-input" id="id_foto" name="foto"
